--- a/fix.html
+++ b/fix.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
+    <style>        
         html {
             /* background-color: blueviolet; */
         }
@@ -19,12 +19,18 @@
         .headerCnt {
             border: 1px dashed rgb(255, 133, 133);
             margin: 10px;
-            /* flex-grow: 3; */
-            position: absolute;
+            /* position: absolute; */
+            /* flex-direction: row; */
+            /* flex-direction: column-reverse; */
+            /* width: 100%; */
+        }
+
+        .headerCnt > p {
+            flex-direction: row-reverse;
         }
 
         body {
-            border: 2px solid green;
+            border: 3px dotted green;
             margin: 0;
             /* margin: 10px; */
 
@@ -43,14 +49,14 @@
         .bodyCntnt {
             border: 1px dashed greenyellow;
             margin: 10px;
-            /* flex-grow: 1; */
             /* flex-basis: 100vh; */
             flex: 0 0 100vh;
+            align-content: center;
         }
 
-        .bodyCntnt > p {
+        /* .bodyCntnt > p {
             margin-top: 100px;
-        }
+        } */
 
         /* footer {
             border: 2px solid blue;
@@ -60,7 +66,6 @@
         .footerCnt {
             border: 1px dashed lightblue;
             margin: 10px;
-            /* flex-grow: 2; */
         }
     </style>
 
@@ -70,10 +75,11 @@
 </header>
 <body>
     <div class="mainBody">
-        <div class="headerCnt">
-            <p>Header Container</p>
-        </div>
         <div class="bodyCntnt">
+            <div class="headerCnt" style="flex-grow: 1;">
+                <p>Header Container Header Container Header Container Header Container Header Container Header Container</p>
+            </div>
+
             <p>
 
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non ipsum quam. Nunc scelerisque venenatis malesuada. Duis sem sem, dictum ac fermentum quis, efficitur et ante. Nam eu massa velit. Fusce at ex dolor. Proin tortor mi, varius eu sodales vel, cursus at nunc. In vitae nisi volutpat, pellentesque nibh sit amet, malesuada tortor. Nunc feugiat dolor ut mauris bibendum ultrices. Nulla sodales orci non tellus aliquam ullamcorper. Fusce blandit fermentum feugiat. In venenatis felis nec laoreet blandit. Mauris sit amet augue quis dui rutrum volutpat. Nulla ultrices elit in eros porta, eu hendrerit ex convallis. Mauris ornare sem in pellentesque semper. Mauris sodales leo id turpis vestibulum dictum. In auctor augue vitae dui sollicitudin fermentum.
@@ -84,7 +90,8 @@
                 
                 Proin elementum euismod ex id scelerisque. Duis eros massa, volutpat sed lobortis quis, tempor sed neque. Etiam dolor quam, tristique ut pellentesque ut, vulputate id risus. Fusce eleifend arcu sed turpis aliquam sodales. Duis sed nisl cursus, egestas ante vel, volutpat est. Quisque eu est vel dolor facilisis volutpat aliquet sit amet enim. Suspendisse sapien velit, condimentum ac sem in, suscipit viverra ipsum. Cras vel odio a nulla sagittis congue. Donec sed egestas tortor, non sodales sapien. Aliquam lobortis, ante ut dapibus faucibus, odio erat facilisis odio, eget suscipit sapien risus vel lorem. Donec blandit laoreet nibh in fringilla. Morbi fermentum efficitur ipsum.
                 
-                Suspendisse vitae posuere diam. Aliquam nec ornare urna. Mauris scelerisque dapibus diam eget auctor. Maecenas volutpat accumsan massa non hendrerit. In sed elit a erat viverra tempus et quis urna. Praesent pretium imperdiet nulla ut varius. Quisque luctus gravida ante, eget iaculis risus ullamcorper non. Vestibulum sapien eros, pulvinar id lacinia sit amet, sagittis eget justo. Nam pulvinar risus vitae leo condimentum ultricies. Maecenas sed nisl sodales, varius ipsum a, tincidunt felis. Aenean sit amet arcu nisi. Nulla facilisi. </p>
+                Suspendisse vitae posuere diam. Aliquam nec ornare urna. Mauris scelerisque dapibus diam eget auctor. Maecenas volutpat accumsan massa non hendrerit. In sed elit a erat viverra tempus et quis urna. Praesent pretium imperdiet nulla ut varius. Quisque luctus gravida ante, eget iaculis risus ullamcorper non. Vestibulum sapien eros, pulvinar id lacinia sit amet, sagittis eget justo. Nam pulvinar risus vitae leo condimentum ultricies. Maecenas sed nisl sodales, varius ipsum a, tincidunt felis. Aenean sit amet arcu nisi. Nulla facilisi.
+            </p>
         </div>
         <div class="footerCnt">
             <p>Footer Container</p>
